Fixed alignment

--- a/lesson2/styles/large.css
+++ b/lesson2/styles/large.css
@@ -29,9 +29,9 @@ h1 {
 main {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 10px;
-    width: 100%;
-    margin: 30px auto;
+    grid-gap: 20px;
+    width: 95%;
+    margin: 20px auto;
 }
 section * {
     font-family: 'Roboto', sans-serif;
@@ -47,6 +47,7 @@ h3 {
     margin: 0;
     font-family: 'Handlee', cursive; 
     padding: 10px;
+    text-align: center;
     background: #be95c4ff;
     color: white;
 }
@@ -67,7 +68,7 @@ section img {
     display: block;
     margin: 0 auto;
     border: solid 1px #5e548eff;
-    max-width: 350px;
+    max-width: 320px;
 }
 footer {
     text-align: center;
